new site version 1

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="styles/styles.min.css">
     <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
     <!-- <link rel="shortcut icon" href="favicon.ico" type="image/x-icon"> -->
     <title>Derek Torsani</title>
@@ -23,59 +23,117 @@
 
 <div class="side">
     <div class="nav">
-        <a class="mr-16" id="tw" href="https://twitter.com/dmtors" target="_blank"></a>
-        <a class="mr-16" id="dr" href="https://dribbble.com/dmtors" target="_blank"></a>
-        <a class="mr-16" id="md" href="https://medium.com/@dmtors" target="_blank"></a>
-        <a class="mr-16" id="un" href="https://unsplash.com/@dmtors" target="_blank"></a>
-        <a class="mr-16" id="vi" href="https://vimeo.com/dmtors" target="_blank"></a>
-        <a class="mr-16" id="sc" href="https://soundcloud.com/soundslikesequoia" target="_blank"></a>
-        <a class="mr-16" id="ig" href="https://instagram.com/derektorsani" target="_blank"></a>
+        <a href="derektorsani-resume-2019.pdf">Resume</a>
     </div>
     <div class="title">
         <h1>Derek Torsani</h1>
-        <p>— an Android slinging, bass string strumming, hip hop humming, hobby hoarding designer.</p>
+        <p>— designer, musician, friend to all.</p>
     </div>
     <a class="contact" href="mailto:derektorsani@gmail.com" target="_blank"><div>
-        <h6>Let's Talk</h6>
+        <h6>Lets Talk</h6>
     </div></a>
 </div>
 
 <div class="images">
-    <img class="imgA" src="images/637.gif" alt="A filmic, grainy ink-like substance animating on and off the screen."/>
-    <img class="imgB" src="images/android.gif" alt="The Android Marshmallow boot animation. A series of colorful shapes forming and morphing into and out of one another."/>
+    <img class="imgA" src="images/dmtors.gif"/>
+    <img class="imgB" src="images/637.gif"/>
 </div>
 
 <div class="main">
     <div class="content">
-        <h1>Design is an opportunity.</h1>
-        <p>An avenue of global change. A form of interlingual communication, similar to the sounds of music. The way we understand one another and open pathways of inclusivity. It brings access of familiarity to individuals unfamiliar with accessibility. Design enables the choice to be heard.</p>
-        <p>This is why I create in many mediums, as a way to build character through comprehension and consideration.</p>
-    </div>
-    <div class="logos">
-        <img class="logo" style="" src="images/oracle.svg" alt="The Oracle logo."/>
-        <img class="logo" style="" src="images/alarm.svg" alt="The Alarm.com logo."/>
-        <img class="logo" style="" src="images/samcart.svg" alt="The SamCart logo."/>
-        <img class="logo" style="" src="images/brllnt.svg" alt="The Brllnt logo."/>
-        <img class="logo" style="" src="images/sandals.svg" alt="The Sandals logo."/>
-        <img class="logo" style="" src="images/522.svg" alt="The 522 Productions logo."/>
-        <img class="logo" style="" src="images/mica.svg" alt="The Maryland Institute College of Art logo."/>
-    </div>
-    <div class="content">
-        <p>In the past eight years, I have worked with small agencies animating motion graphics, large brands telling visual stories through film, fast-paced startups intersecting business goals with design, and tech companies conducting user research, drawing wireframes, and prototyping interfaces.</p>
-        <p>For the past two years, I've been focused on building cohesively elaborate design systems for distributed teams at companies like <a href="https://oracle.com" target="_blank">Oracle</a> and <a href="https://alarm.com" target="_blank">Alarm.com</a>. While this may come with great challenges, to me there is no reward greater than enabling people to work together more consistently, efficiently, and in stronger communicative bounds.</p>
-        <p>When I’m not designing for work, you can find me making side projects. Be it a <a href="http://halfdollar.org" target="_blank">spreadsheet budgeting system</a>, a way to help <a href="http://weiigh.com" target="_blank">make calculated decisions</a>, or an <a href="http://friendsanonymo.us" target="_blank">anonymous online community</a> for discussion, I’ve always got my hand in something.</p>
-        <p>I also develop hypotheses and conduct experiments in design. Here are some of them:</p>
-        <p>• <a href="https://medium.com/@dmtors/autra-automatic-content-translation-9763776117c8" target="_blank">Autra</a> — how can we encourage better communication between diverse parties using technology?</p>
-        <p>• <a href="https://dribbble.com/shots/5387327-System-Font-Structure-Experiment" target="_blank">System Fonts</a> — structurally, how dissimilar are the four major operating system native fonts?</p>
-        <p>• <a href="https://medium.com/@dmtors/my-4-5-month-journey-with-daily-ui-1ce0f103d2bb" target="_blank">Daily UI</a> — can I animate a different interactive design prompt every day for 100 days straight?</p>
-        <p>• <a href="https://blog.prototypr.io/the-show-hide-eyeball-in-ui-design-7514991611b6" target="_blank">Seeing Into the Future</a> — what is the future of the menu icon, or the lack thereof?</p>
-        <p>I’m a strong believer in staying sharp, self-wellness, and growth. There are a few ways I do this for myself:</p>
-        <p>• <a href="https://paper.dropbox.com/doc/Reading-Queue--AO7PFotxiJOovvjINWQtY9Y8AQ-PJ5fVkXVMCUZd2b5qkyKi" target="_blank">Working through my book queue</a></p>
-        <p>• <a href="https://www.duolingo.com/" target="_blank">Learning new languages</a></p>
-        <p>• <a href="https://www.headspace.com/" target="_blank">Getting in the right headspace through meditation</a></p>
-        <p>• <a href="https://www.yogadistrict.com/" target="_blank">Finding balance with practicing yoga</a></p>
-        <p>Seldom do we judge people based on their character but what we see, hear, and assume. Get to know one another. Spread love and kindness. :)</p>
+        <h5>About</h5>
+        <p>I create through a lens of self-expression and not validation, nor judgement on any other way of living. Design and music are avenues of global change, interlingual communication, and the way we understand one another. It brings access of familiarity to individuals unfamiliar with accessibility and opens pathways of inclusivity.</p>
+        <p>Let's change the way we eat, the change the way live, and let's change the way we treat each other. —Tupac Shakur, 1992</p>
         </br></br>
+        <h5>Value</h5>
+        <h1>Choosing to Not Wear a Smart Watch</h1>
+        <p>I value honest and open communication and listening over knowing the latest notification I've received. I keep my phone on silent and do not disturb to ensure I'm engaged in the conversation or activity I'm in at the moment rather than being distracted and not giving the human or task I'm focused on my respect and attention. Besides, the watch I wear was my grandfathers.</p>
+        </br></br>
+        <h5>Value</h5>
+        <h1>Reading in a Tangible Format</h1>
+        <p>I spend the greater part of my day on my laptop either designing or making music. Instead of endlessly scrolling through feeds of friends I don't truly connect with, mostly filled with gossip, complaints, or non-cerebral memes, I choose to not be on social media and would rather read a book. The health of my eyes and my mind are important to me, so I read in printed format on environmental and social topics that help me reflect on the world and positively contribute to moving it forward.</p>
+        </br></br>
+        <h5>Value</h5>
+        <h1>Giving of My Resources</h1>
+        <p>I stand for accessible education and volunteering more than I do earning a dollar. As much as I'm able to, I give away design assets I create and never start a side project with a goal of monetizing. In my spare time, I'd rather get outside and clean up trash from the park than freelance for extra income. I recognize my privilege to be able to choose to do this, and commend people like teachers (my sister) who are underpaid for the amount of effort they invest in their students and impact they have on future generations and society.</p>
+        </br></br>
+        <h5>Value</h5>
+        <h1>Learning from Podcasts, Music, and Video</h1>
+        <p>I'm influenced creativity and spiritually mostly by hearing people who are different than myself tell their stories. Everyday I digest media and current events by listening to a variety of different podcasts by people with similar and vastly different lived experiences than my own, music that comes from all over the world, and watching films that explore new ideas and explain different perspectives visually.</p>
+        </br></br>
+        <h5>Value</h5>
+        <h1>Fine Tuning My Craft</h1>
+        <p>I'm not a techie. I don't even like that word, or any buzz word or acronym for that matter. I don't enjoy exclusive language that doesn't allow different demographics and identities of people to understand a message and join in conversation. This is why I design and make music. I believe these are universal languages that allow for inclusivity and challenge us to think about how others see and experience the world. I don't believe I need to know the latest cryptocurrency or use the same illustration style and color palette that every other designer is using to further my knowledge in my industry and refine my craft.</p>
+        </br></br></br>
+    </div>
+    <div class="section" id="present">
+        <div class="content">
+            <img class="logo" src="images/oracle.svg"/>
+            <h5>Senior Product Designer</h5>
+            <p>Currently, I am leading design systems at <span>Oracle Data Cloud</span>, designing responsive web interfaces in the data management and analytics workspaces, and animating marketing videos.</p>
+        </div>
+    </div>
+    <div class="section" id="history">
+        <div class="content">
+            <img class="logo mr-16" src="images/alarm.svg"/><img class="logo mr-16" src="images/samcart.svg"/><img class="logo mr-16" src="images/sandals.svg"/><img class="logo" src="images/mica.svg"/>
+            <h5>User Experience, Web, Motion, Graphic Design</h5>
+            <p>In the past decade, I have worked with small agencies animating motion graphics, large brands telling visual stories through film, fast-paced startups intersecting business goals with design, and tech companies conducting user research, drawing wireframes, and prototyping interfaces.</p>
+            <p>For the past two years, I've been focused on building cohesively elaborate design systems for distributed teams at large software companies. While this may come with great challenges, it is rewarding to enable people to work together more consistently, efficiently, and in stronger communicative bounds.</p>
+            <img class="image" src="images/samcart.gif"/>
+        </div>
+    </div>
+    <div class="section" id="halfdollar">
+        <div class="content">
+            <img class="logo" src="images/halfdollar.svg"/>
+            <h5>Maker</h5>
+            <p><span>Halfdollar</span> is a free spreadsheet budgeting template built for collaboration. It enables you to manually log transactions of varying frequencies, then calculates leftover amounts, plan to actual comparisons, and predict annual forecasts.</p>
+            <img class="image" src="images/halfdollar.gif"/>
+            <a href="http://halfdollar.org">Visit Halfdollar →</a>
+        </div>
+    </div>
+    <div class="section" id="weiigh">
+        <div class="content">
+            <img class="logo" src="images/weiigh.svg"/>
+            <h5>Maker</h5>
+            <p><span>Weiigh</span> is a spreadsheet that helps you weigh your options and preferences, and decide between two or more choices.</p>
+            <a href="http://weiigh.com">Visit Weiigh →</a>
+        </div>
+    </div>
+    <div class="section" id="sound">
+        <div class="content">
+            <img class="logo" src="images/sound.svg"/>
+            <h5>Maker</h5>
+            <p><span>SeeSound</span> is an exploration to make sound accessible to people who experience hearing loss.</p>
+            <a href="http://seesound.org">See Sound for Yourself →</a>
+        </div>
+    </div>
+    <div class="section" id="intermission">
+        <div class="content">
+            <img class="logo" src="images/sound.svg"/>
+            <h5>Musician</h5>
+            <p>One half of <span>Intermission</span>, a rhythm and blues music duo.</p>
+            <iframe class="image" width="100%" height="300" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/631486881&color=%23fdb913&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true&visual=true"></iframe>
+            <a href="https://soundcloud.com/intermissiondc">Listen to Intermission →</a>
+        </div>
+    </div>
+    <div class="section" id="dailyui">
+        <div class="content">
+            <img class="logo" src="images/dailyui.svg"/>
+            <h5>Contributor</h5>
+            <p>I became one of the first to complete all 100 days of the <span>DailyUI</span> design challenge, and animated every single one. Even got a feature on their homepage.</p>
+            <p>My most popular prompt was awarded "Best of the Day in Android" by <span>UpLabs</span>.</p>
+            <img class="image" src="images/android.gif"/>
+            <a href="https://dribbble.com/dmtors/projects/319430-Daily-UI">View My DailyUI →</a>
+        </div>
+    </div>
+    <div class="section" id="unsplash">
+        <div class="content">
+            <img class="logo" src="images/unsplash.svg"/>
+            <h5>Contributor</h5>
+            <p>One of my hobbies is taking and editing photography on my phone and I'm thankful for communities like <span>Unsplash</span> which allow my photos to have been viewed over 10,000,000 times.</p>
+            <img class="image" src="images/unsplash.jpg"/>
+            <a href="https://unsplash.com/@dmtors">View All My Photos →</a>
+        </div>
     </div>
 </div>
 
