changed link colors and font weight

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link rel="stylesheet" href="styles/styles.min.css">
-    <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Roboto:400,700&display=swap" rel="stylesheet">
     <!-- <link rel="shortcut icon" href="favicon.ico" type="image/x-icon"> -->
     <title>Derek Torsani</title>
     <!-- Global site tag (gtag.js) - Google Analytics -->
@@ -109,7 +109,7 @@
     </div>
     <div class="section" id="intermission">
         <div class="content">
-            <img class="logo" src="images/sound.svg"/>
+            <img class="logo" src="images/intermission.svg"/>
             <h5>Musician</h5>
             <p>One half of <span>Intermission</span>, a rhythm and blues music duo.</p>
             <iframe class="image" width="100%" height="300" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/631486881&color=%23fdb913&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true&visual=true"></iframe>
