--- a/index.html
+++ b/index.html
@@ -96,13 +96,13 @@
         </br></br>
         <h5>Principles</h5>
         <h2>Communication</h2>
-        <p><i>Honest and transparent communication are important to understand the perspectives around oneself. Listening to those speaking takes presedence over checking the latest notification received. Devices are kept on 'do not disturb' to ensure full engagement in the present moment over distraction and not giving the human or task the attention it deserves.</i></p>
+        <p><i>Honest and transparent communication are important to understand the perspectives around oneself. Listening to those speaking takes precedence over checking the latest notification received. Devices are kept on 'do not disturb' to ensure full engagement in the present moment over distraction and not giving the human or task the attention it deserves.</i></p>
         </br></br>
         <h2>Tangibility</h2>
         <p><i>Social media is a human-made construct to falsely validate our value in society. In-person interactions provide a more welcoming space for emotive transmission as well as appropriate moments for silence. With the adoption of screens has also come the adaptation of emotional ignorance. Connection with the world beyond the screen promotes the wealth of the mind and the health of the heart.</i></p>
         </br></br>
         <h2>Altruism</h2>
-        <p><i>Giving back of ones resources and gifts is worth more than the receipt of clout and money. We are not promised tomorrow. We do not go to the grave with what we've been giving, but leave behind what we have given. Monetization is never the first goal of any project. Cleaning up the earth and lending a hand to marginialized communities allow us to mother nature and one another in ways we all need but are sometimes not humble enough to admit. The more empathy is learned for the ones we don't see in the mirror, the more harmonious we can live among each other.</i></p>
+        <p><i>Giving back of ones resources and gifts is worth more than the receipt of clout and money. We are not promised tomorrow. We do not go to the grave with our belongings, but leave behind what we have given. Monetization is never the first goal of any project. Cleaning up the earth and lending a hand to marginalized communities allow us to mother nature and one another in ways we all need but are sometimes not humble enough to admit. The more empathy is learned for the ones we don't see in the mirror, the more harmonious we can live among each other.</i></p>
         </br></br>
         <h2>Recognition</h2>
         <p><i>Creative and spiritual inspiration occurs when we listen to people who are different than ourselves tell their stories. Recognition of privilege by way of race, class, access to resources is necessary for acknowledgement of contrasting perspectives. This recognition can be found in music, podcasts, books, film, and other forms of dialogue.</i></p>
