--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link rel="stylesheet" href="styles/styles.min.css">
     <link href="https://fonts.googleapis.com/css?family=IBM+Plex+Sans:500,500i,600,600i&display=swap" rel="stylesheet">
-    <!-- <link rel="shortcut icon" href="favicon.ico" type="image/x-icon"> -->
+    <link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon">
     <title>Derek Torsani</title>
     <!-- Global site tag (gtag.js) - Google Analytics -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=UA-144041212-1"></script>
@@ -65,98 +65,88 @@
 <body>
 
 <div class="side">
-    <div class="nav">
-        <a aria-label="Home" href="#images">Sequoia</a> •
+    <div class="nav desktop">
         <a aria-label="About" href="#about">About</a> •
-        <a aria-label="Labs" href="#labs">Labs</a> •
+        <a aria-label="Principles" href="#principles">Principles</a> •
+        <a aria-label="Projects" href="#projects">Projects</a> •
+        <a aria-label="Contact" href="#contact">Contact</a> •
+        <a aria-label="Résumé" href="derektorsani-resume-2019.pdf">Résumé</a>
+    </div>
+    <div class="nav mobile">
+        <a aria-label="About" href="#about">About</a> •
+        <a aria-label="Principles" href="#principles">Principles</a> •
+        <a aria-label="Projects" href="#projects">Projects</a> •
+        </br>
         <a aria-label="Contact" href="#contact">Contact</a> •
         <a aria-label="Résumé" href="derektorsani-resume-2019.pdf">Résumé</a>
     </div>
     <div class="title">
-        <h1>Sequoia</h1>
-        <h2>/səˈk(w)oiə/</h2>
-        <p><span>noun</span> • a redwood tree, especially the California redwood.</p>
-        <h6>from Sequoya, the name of the Cherokee Indian who invented the Cherokee syllabary.</h6>
+        <h1>Derek Torsani</h1>
+        <h2>/ˈdɛrɪk tôrsänē/</h2>
+        <p>friend to all</p>
+        <h6>they/them/theirs</h6>
     </div>
-    <!-- <a class="contact" href="mailto:derektorsani@gmail.com" target="_blank"><div>
-        <h6>Lets Talk</h6>
-    </div></a> -->
 </div>
 
 <div id="images" class="images">
-    <img class="imgA" src="images/637.gif"/>
-    <img id="about" class="imgB" src="images/dmtors.gif"/>
+    <img class="imgA" alt="Ink-like textures spreading around" src="images/637.gif"/>
+    <img class="imgB" alt="Android Marshmallow Booting Animation" src="images/dailyui-076.gif"/>
 </div>
 
 <div class="main">
     <div class="content">
+        <img id="about" class="image" src="images/dmtors.gif" style="border-radius:4px;"/>
+        </br></br></br>
         <h5>About</h5>
-        <p><i>Sequoia is a creative initiative by multidisciplinary designer and multi-instrumentalist Derek Torsani. Currently, Derek lives and works out of Washington, DC, designing digital products and managing a design system for Oracle.</i></p>
-        <p><i>Let's change the way we eat, the change the way live, and let's change the way we treat each other. —Tupac Shakur, 1992</i></p>
+        </br>
+        <p>I'm a multidisciplinary designer and multi-instrumentalist creating work that focuses on diverse inclusion, social impact, and explores the boundaries of art, language, and communication.</p>
+        <p>Currently, I live in Washington, DC and work remotely designing digital products and managing a design system for Oracle.</p>
+        <p>-</p>
+        <p id="principles"><i>"Let's change the way we eat, the change the way live, and let's change the way we treat each other."</i></p>
+        <p><i>—Tupac Shakur, 1992</i></p>
         </br></br>
         <h5>Principles</h5>
+        </br>
         <h2>Communication</h2>
-        <p><i>Honest and transparent communication are important to understand the perspectives around oneself. Listening to those speaking takes precedence over checking the latest notification received. Devices are kept on 'do not disturb' to ensure full engagement in the present moment over distraction and not giving the human or task the attention it deserves.</i></p>
+        <p>Communicating honestly and transparently helps me to understand others and allows me to better be understood. Listening to someone speaking takes precedence over checking the latest notification received, so I keep my phone on 'Do Not Disturb' to ensure I am fully engaged in the present moment and giving the human or task at hand the attention it deserves.</p>
         </br></br>
         <h2>Tangibility</h2>
-        <p><i>Social media is a human-made construct to falsely validate our value in society. In-person interactions provide a more welcoming space for emotive transmission as well as appropriate moments for silence. With the adoption of screens has also come the adaptation of emotional ignorance. Connection with the world beyond the screen promotes the wealth of the mind and the health of the heart.</i></p>
+        <p>Instead of being very active on social media, I value in-person interactions which provide a more welcoming space for emotion, clarity, and appropriate silence. This is difficult as an introvert, but I've found that staying connected with the world beyond the screen improves the wealth of my mind and the health of my heart.</p>
         </br></br>
         <h2>Altruism</h2>
-        <p><i>Giving back of ones resources and gifts is worth more than the receipt of clout and money. We are not promised tomorrow. We do not go to the grave with our belongings, but leave behind what we have given. Monetization is never the first goal of any project. Cleaning up the earth and lending a hand to marginalized communities allow us to mother nature and one another in ways we all need but are sometimes not humble enough to admit. The more empathy is learned for the ones we don't see in the mirror, the more harmonious we can live among each other.</i></p>
+        <p>Giving back of my resources and gifts is worth more to me than receiving clout or money. Monetization is never the first goal of any project I create. It is important to me to be present among marginalized communities and educate myself on the way others experience the world. The more empathy we gain for others, the more harmonious we can live among each other and help give of what we each have to benefit the greater good of humanity.</p>
         </br></br>
         <h2>Recognition</h2>
-        <p><i>Creative and spiritual inspiration occurs when we listen to people who are different than ourselves tell their stories. Recognition of privilege by way of race, class, access to resources is necessary for acknowledgement of contrasting perspectives. This recognition can be found in music, podcasts, books, film, and other forms of dialogue.</i></p>
+        <p>Creative inspiration and spiritual growth occur most when I listen to people who are different than myself share their stories. Recognition of privilege by way of race, class, and access to resources is necessary for me to acknowledge differing perspectives. I typically find this in music, podcasts, books, film, and most of all, through engagement with others.</p>
         </br></br>
         <h2>Studiousness</h2>
-        <p><i> Practice makes progress. Striving for perfection limits the ability to reach people hoping for connection to purpose and relation. Exclusive language does not allow different demographics and identities of people to understand a message and join in conversation. Design and music are both languages that can transcend barriers of culture, language, and emotion. Universal languages that allow for inclusivity and challenge us to think about how others experience the world.</i></p>
+        <p id="projects">I believe that practice makes progress. Striving for perfection limits my ability to connect to my purpose. Design and music are both forms of communication I use that can transcend barriers of culture, language, and emotion.</p>
+        </br></br>
+        <h5>Projects</h5>
+        </br>
+        <h2>Halfdollar</h2>
+        <p>A free spreadsheet budgeting template built for collaboration. It enables you to manually log transactions of varying frequencies, then calculates leftover amounts, plan to actual comparisons, and predict monthly and annual forecasts.</p>
+        </br>
+        <a aria-label="Visit Halfdollar" href="https://halfdollar.org/">Visit Halfdollar</a>
         </br></br></br></br>
-    </div>
-    <div class="section" id="labs">
-        <div class="content">
-            <h5>Labs</h5>
-            <p><i>The Lab provides a space to experiment in visual, sonic, and emotive mediums. Projects are generally focused on diverse inclusion, social impact, and explore the boundaries of art, language, and literature.</i></p>
-        </div>
-    </div>
-    <img class="image" alt="Android Marshmallow Booting Animation" src="images/dailyui-076.gif"/>
-    <div class="section" id="halfdollar">
-        <div class="content">
-            <h5>Halfdollar</h5>
-            <p><i>A free spreadsheet budgeting template built for collaboration. It enables you to manually log transactions of varying frequencies, then calculates leftover amounts, plan to actual comparisons, and predict annual forecasts.</i></p>
-            </br>
-            <a aria-label="Visit Halfdollar" href="https://halfdollar.org">Visit halfdollar.org</a>
-        </div>
-    </div>
-    <img class="image" alt="Halfdollar animated explanation" src="projects/halfdollar/halfdollar.gif"/>
-    <!-- <div class="section" id="sound">
-        <div class="content">
-            <h5>Supersonicas</h5>
-            <p><i>An exploration to make sound accessible to people who experience hearing loss. (Currently in progress)</i></p>
-            </br>
-            <a aria-label="Visit Supersonicas" href="https://supersonicas.com">Visit Supersonicas</a>
-        </div>
-    </div>
-    <div class="section" id="game">
-        <div class="content">
-            <h5>••••••</h5>
-            <p><i>A scoring dice game that is not limited by the bounds of language, even down to the explanation of rules. (Currently in progress)</i></p>
-            </br>
-            <a aria-label="Visit the Dice Game" href="">Learn more about this game</a>
-        </div>
-    </div> -->
-    <div class="section" id="weiigh">
-        <div class="content">
-            <h5>Weiigh</h5>
-            <p><i>A spreadsheet assisting in determining the weight of personal options and preferences, and deciding between two or more choices.</i></p>
-            </br>
-            <a aria-label="Visit Weiigh" href="https://weiigh.com">Visit weiigh.com</a>
-        </div>
-    </div>
-    <iframe class="image" style="height:600px;" src="https://docs.google.com/spreadsheets/d/e/2PACX-1vRkmoiUTYAJd64hlpXMHKEpyHM5-QcgXBLhKB7elC8QKsptXJQVuHEEfznZUv1k17ooB7OHWQPWwexR/pubhtml?widget=true&amp;headers=false"></iframe>
-    <div class="section" id="jukebox">
-        <div class="content">
-            <h5>Jukebox</h5>
-            <p><i>An ongoing personal collection of vinyl and accompanying samples.</i></p>
-        </div>
+        <h2>Weiigh</h2>
+        <p>A spreadsheet assisting in determining the weight of personal options and preferences, and deciding between two or more choices. <i>(please understand that to have an option of choice in the first place is to be privileged)</i></p>
+        </br>
+        <a aria-label="Visit Weiigh" href="https://weiigh.com/">Visit Weiigh</a>
+        </br></br></br></br>
+        <h2>Supersonicas</h2>
+        <p>A sound-color experiment offering accessibility to sound for people who experience hearing loss.</p>
+        </br>
+        <a aria-label="Visit Supersonicas" href="https://supersonicas.com/">Visit Supersonicas</a>
+        </br></br></br></br>
+        <h2>Sequoia</h2>
+        <p>Music exploring the juxtaposition of genres.</p>
+        </br>
+        <a aria-label="Listen to Sequoia" href="https://soundcloud.com/soundslikesequoia/">Listen to Sequoia</a>
+        </br></br></br></br>
+        <h2>Jukebox</h2>
+        <p>An ongoing personal collection of vinyl and accompanying samples.</p>
+        </br></br>
     </div>
     <div id="records">
         <img alt="record album cover" src="projects/jukebox/antibalas.jpg" onmouseover="playSound('antibalas')" onmouseleave="stopSound('antibalas')"/>
@@ -192,35 +182,24 @@
         <img alt="record album cover" src="projects/jukebox/we-out-here.jpg" onmouseover="playSound('we-out-here')" onmouseleave="stopSound('we-out-here')"/>
         <img alt="record album cover" src="projects/jukebox/yin-yin.jpg" onmouseover="playSound('yin-yin')" onmouseleave="stopSound('yin-yin')"/>
     </div>
-    <div class="section" id="sketchbook">
-        <div class="content">
-            <h5>Quick Sketches</h5>
-            <p><i>Quick sketching is a way to step back from rigid guidelines of everyday work, and draw without looking at the canvas or lifting up the medium.</i></p>
-        </div>
-    </div>
-    <div id="pages">
-        <img alt="sketchbook page" src="projects/sketchbook/sketch1.jpg"/>
-        <img alt="sketchbook page" src="projects/sketchbook/sketch2.jpg"/>
-        <img alt="sketchbook page" src="projects/sketchbook/sketch3.jpg"/>
-        <img alt="sketchbook page" src="projects/sketchbook/sketch4.jpg"/>
-        <img alt="sketchbook page" src="projects/sketchbook/sketch5.jpg"/>
-        <img alt="sketchbook page" src="projects/sketchbook/sketch6.jpg"/>
-        <img alt="sketchbook page" src="projects/sketchbook/sketch7.jpg"/>
-        <img alt="sketchbook page" src="projects/sketchbook/sketch8.jpg"/>
-        <img alt="sketchbook page" src="projects/sketchbook/sketch9.jpg"/>
-        <img alt="sketchbook page" src="projects/sketchbook/sketch10.jpg"/>
-        <img alt="sketchbook page" src="projects/sketchbook/sketch11.jpg"/>
-        <img alt="sketchbook page" src="projects/sketchbook/sketch12.jpg"/>
-        <img alt="sketchbook page" src="projects/sketchbook/sketch13.jpg"/>
-        <img alt="sketchbook page" src="projects/sketchbook/sketch14.jpg"/>
-    </div>
     <div class="section" id="contact">
-        <div class="content">
+        <div class="content desktop">
             <h5>Contact</h5>
             <a aria-label="Email" href="mailto:derektorsani@gmail.com">Email</a> •
             <a aria-label="Twitter" href="https://twitter.com/dmtors">Twitter</a> •
             <a aria-label="Instagram" href="https://instagram.com/derektorsani">Instagram</a> •
             <a aria-label="Dribbble" href="https://dribbble.com/dmtors">Dribbble</a> •
+            <a aria-label="Medium" href="https://medium.com/@dmtors">Medium</a> •
+            <a aria-label="Unsplash" href="https://unsplash.com/dmtors">Unsplash</a> •
+            <a aria-label="LinkedIn" href="https://linkedin.com/in/derektorsani">LinkedIn</a>
+        </div>
+        <div class="content mobile">
+            <h5>Contact</h5>
+            <a aria-label="Email" href="mailto:derektorsani@gmail.com">Email</a> •
+            <a aria-label="Twitter" href="https://twitter.com/dmtors">Twitter</a> •
+            <a aria-label="Instagram" href="https://instagram.com/derektorsani">Instagram</a> •
+            <a aria-label="Dribbble" href="https://dribbble.com/dmtors">Dribbble</a> •
+            </br>
             <a aria-label="Medium" href="https://medium.com/@dmtors">Medium</a> •
             <a aria-label="Unsplash" href="https://unsplash.com/dmtors">Unsplash</a> •
             <a aria-label="LinkedIn" href="https://linkedin.com/in/derektorsani">LinkedIn</a>
