--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
         <h1>Derek Torsani</h1>
         <h2>/ˈdɛrɪk tôrsänē/</h2>
         <p>friend to all</p>
-        <h6>they/them/theirs</h6>
+        <h6>he/him/they</h6>
     </div>
 </div>
 
