--- a/index.html
+++ b/index.html
@@ -60,6 +60,14 @@
     <audio loop id="randy-weston" src="projects/jukebox/randy-weston.mp3" type="audio/mpeg" preload="auto"></audio>
     <audio loop id="creque" src="projects/jukebox/creque.mp3" type="audio/mpeg" preload="auto"></audio>
     <audio loop id="jazz-samba" src="projects/jukebox/jazz-samba.mp3" type="audio/mpeg" preload="auto"></audio>
+    <audio loop id="ayizan" src="projects/jukebox/ayizan.mp3" type="audio/mpeg" preload="auto"></audio>
+    <audio loop id="enrico-rava" src="projects/jukebox/enrico-rava.mp3" type="audio/mpeg" preload="auto"></audio>
+    <audio loop id="gato" src="projects/jukebox/gato.mp3" type="audio/mpeg" preload="auto"></audio>
+    <audio loop id="henri-texier" src="projects/jukebox/henri-texier.mp3" type="audio/mpeg" preload="auto"></audio>
+    <audio loop id="irakere" src="projects/jukebox/irakere.mp3" type="audio/mpeg" preload="auto"></audio>
+    <audio loop id="juju" src="projects/jukebox/juju.mp3" type="audio/mpeg" preload="auto"></audio>
+    <audio loop id="yusef-diverse" src="projects/jukebox/yusef-diverse.mp3" type="audio/mpeg" preload="auto"></audio>
+    <audio loop id="yusef-hush" src="projects/jukebox/yusef-hush.mp3" type="audio/mpeg" preload="auto"></audio>
 </head>
 
 <body>
@@ -181,6 +189,14 @@
         <img alt="record album cover" src="projects/jukebox/take-five.jpg" onmouseover="playSound('take-five')" onmouseleave="stopSound('take-five')"/>
         <img alt="record album cover" src="projects/jukebox/we-out-here.jpg" onmouseover="playSound('we-out-here')" onmouseleave="stopSound('we-out-here')"/>
         <img alt="record album cover" src="projects/jukebox/yin-yin.jpg" onmouseover="playSound('yin-yin')" onmouseleave="stopSound('yin-yin')"/>
+        <img alt="record album cover" src="projects/jukebox/ayizan.jpg" onmouseover="playSound('ayizan')" onmouseleave="stopSound('ayizan')"/>
+        <img alt="record album cover" src="projects/jukebox/enrico-rava.jpg" onmouseover="playSound('enrico-rava')" onmouseleave="stopSound('enrico-rava')"/>
+        <img alt="record album cover" src="projects/jukebox/gato.jpg" onmouseover="playSound('gato')" onmouseleave="stopSound('gato')"/>
+        <img alt="record album cover" src="projects/jukebox/henri-texier.jpg" onmouseover="playSound('henri-texier')" onmouseleave="stopSound('henri-texier')"/>
+        <img alt="record album cover" src="projects/jukebox/irakere.jpg" onmouseover="playSound('irakere')" onmouseleave="stopSound('irakere')"/>
+        <img alt="record album cover" src="projects/jukebox/juju.jpg" onmouseover="playSound('juju')" onmouseleave="stopSound('juju')"/>
+        <img alt="record album cover" src="projects/jukebox/yusef-diverse.jpg" onmouseover="playSound('yusef-diverse')" onmouseleave="stopSound('yusef-diverse')"/>
+        <img alt="record album cover" src="projects/jukebox/yusef-hush.jpg" onmouseover="playSound('yusef-hush')" onmouseleave="stopSound('yusef-hush')"/>
     </div>
     <div class="section" id="contact">
         <div class="content desktop">
